--- a/team-02-1.html
+++ b/team-02-1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -28,7 +28,7 @@
 			<footer class="col-3 footerBar">
 				<div></div>
 				<div class="footer">
-					<p>Website Made by: <a href="https://github.com/Giacomo-Draghi/Giacomo_Draghi_WDD330" target="_blank">Giacomo Draghi</a><a href="index.html">Home</a><a href="week2Team.html">Week2-Team</a></p>
+					<p>Website Made by: <a href="https://github.com/Giacomo-Draghi/Giacomo_Draghi_WDD330" target="_blank">Giacomo Draghi</a><a href="index.html">Home</a></p>
 					
 				</div>
 				<div></div>
