Fixing links and titles.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Giacomo Draghi|Portfolio</title>
+    <title>Team 1|Activityes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="screen" href="src/scss/Style.css">
 </head>
