--- a/team-02-1.html
+++ b/team-02-1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-    	<title>Giacomo Draghi|Point 1</title>
+    	<title>Team 1|Week 2-Point 1</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link rel="stylesheet" media="screen" href="src/scss/Style.css">
 	</head>
@@ -28,7 +28,7 @@
 			<footer class="col-3 footerBar">
 				<div></div>
 				<div class="footer">
-					<p>Website Made by: <a href="https://github.com/Giacomo-Draghi/Giacomo_Draghi_WDD330" target="_blank">Giacomo Draghi</a><a href="index.html">Home</a></p>
+					<p>Website Made by: <a href="https://github.com/Giacomo-Draghi/WDD330-Team1" target="_blank">Team 1</a><a href="index.html">Home</a></p>
 					
 				</div>
 				<div></div>
