--- a/week3.html
+++ b/week3.html
@@ -136,6 +136,9 @@
         console.log(sumPassed - sumYears);
 
         // 5. Sort the inventors by years lived
+        const yrsLived = sumPassed-sumYears;
+        yrsLived.sort(function(a, b){return a - b});
+        console.log(yrsLived);
 
         // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
         // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
